--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@atproto/api": "^0.7.4"
   }
 }
