--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
     "jest-date-mock": "^1.0.8",
+    "jest-mock-extended": "^3.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
