--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@atproto/api": "^0.7.4"
+    "@atproto/api": "^0.7.4",
+    "atproto-firehose": "^0.2.2"
   }
 }
