--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,7 @@ jobs:
       - name: Install Dependencies
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         run: npm ci
-
-#      - name: Install dependencies
-#        run: npm ci --ignore-scripts
       - name: Test
-        run: npm test
+        run: npm test --coverage
+      - name: Upload Code Coverage
+        uses: codecov/codecov-action@v3.1.0
