--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         run: npm ci
       - name: Test
-        run: npm test --coverage
+        run: npm run coverage
       - name: Upload Code Coverage
         uses: codecov/codecov-action@v3.1.0
