--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,7 @@ jobs:
         run: npm ci
       - name: Test
         run: npm run coverage
-      - name: Upload Code Coverage
-        uses: codecov/codecov-action@v3.1.0
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
