--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "tsup",
     "test": "jest",
     "coverage": "jest --coverage",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "format": "npx prettier . --write",
+    "lint": "eslint --ext=.ts src/ tests/ --fix"
   },
   "repository": {
     "type": "git",
@@ -29,9 +31,13 @@
   "homepage": "https://github.com/juni-b-queer/bsky-event-handlers#readme",
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-date-mock": "^1.0.8",
     "jest-mock-extended": "^3.0.5",
+    "prettier": "3.2.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
