--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-date-mock": "^1.0.8",
