--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,9 @@ jobs:
         id: get-branch
         run: |
           foundbranch=$(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")
+          echo $foundbranch
           echo "branch=$foundbranch" >> "$GITHUB_OUTPUT"
+          
 
   release:
     permissions: write-all
