--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,13 +32,19 @@ jobs:
         uses: actions/checkout@v2
       - name: out test
         run: echo ${{needs.prepare.outputs.branch}}
+      - name: Set env BRANCH
+        env:
+          BRANCH: ${{needs.prepare.outputs.branch}}
+        run: echo "BRANCH=$BRANCH" >> $GITHUB_ENV
+
       - name: Early exit
-        if: endsWith(needs.prepare.outputs.branch, 'better-github-actions') == false
+        if: endsWith(env.BRANCH, 'better-github-actions') == false
         run: |
           gh run cancel ${{ github.run_id }}
           gh run watch ${{ github.run_id }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: ${{needs.prepare.outputs.branch}}
 
       - name: Setup Node
         id: setup-node
