--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           FOUNDBRANCH=$(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")
           export BRANCH=$FOUNDBRANCH
+          echo "branch=$BRANCH" >> $GITHUB_ENV
 
       - name: Early exit
         if: endsWith(env.BRANCH, 'better-github-actions') == false
