--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,28 +5,10 @@ on:
       - '*.4.*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    # Map a step output to a job output
-    outputs:
-      branch: ${{ steps.get-branch.outputs.branch }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Get Branch
-        id: get-branch
-        run: |
-          FOUNDBRANCH=$(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")
-          export BRANCH=$FOUNDBRANCH
-          echo "branch=$BRANCH" >> $GITHUB_OUTPUT
-          
-
   release:
     permissions: write-all
     name: Create Release
     runs-on: ubuntu-latest
-    needs: prepare
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -38,16 +20,13 @@ jobs:
 #        run: echo "BRANCH=$BRANCH" >> $GITHUB_ENV
       - name: Get Branch
         id: get-branch
-        run: |
-          FOUNDBRANCH=$(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")
-          export BRANCH=$FOUNDBRANCH
-          echo "branch=$(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")" >> $GITHUB_ENV
+        run: echo "FOUND_BRANCH=$(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")" >> $GITHUB_ENV
       - name: test
         id: test
         run: echo $(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")
 
       - name: Early exit
-        if: endsWith(env.branch, 'better-github-actions') == true
+        if: endsWith(env.FOUND_BRANCH, 'better-github-actions') == true
         run: |
           gh run cancel ${{ github.run_id }}
           gh run watch ${{ github.run_id }}
