--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: out test
-        run: echo ${{needs.prepare.outputs.branch}}
 #      - name: Set env BRANCH
 #        env:
 #          BRANCH: ${{needs.prepare.outputs.branch}}
@@ -24,7 +22,8 @@ jobs:
       - name: test
         id: test
         run: echo $(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")
-
+      - name: out test
+        run: echo $FOUND_BRANCH
       - name: Early exit
         if: endsWith(env.FOUND_BRANCH, 'better-github-actions') == true
         run: |
