--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,16 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-#      - name: Set env BRANCH
-#        env:
-#          BRANCH: ${{needs.prepare.outputs.branch}}
-#        run: echo "BRANCH=$BRANCH" >> $GITHUB_ENV
-#      - name: Get Branch
-#        id: get-branch
-#        run: echo "FOUND_BRANCH=$(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")" >> $GITHUB_ENV
-#      - name: test
-#        id: test
-#        run: echo $(git branch -r --contains ${{ github.ref }} --format "%(refname:lstrip=3)")
+        with:
+          fetch-depth: 0
       - name: set branch
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
