--- a/.github/workflows/updateversion.yml
+++ b/.github/workflows/updateversion.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     types:
       - closed
+      - labeled
     branches:
       - create-release-from-label
 
@@ -11,5 +12,44 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true
     steps:
-      - name: name
-        run: echo "hello world"
+      - name: Checkout code
+        if: ${{ github.event.label.name == 'Patch' }}
+        uses: actions/checkout@v2
+
+#      - name: Setup Node
+#        id: setup-node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 18
+#          registry-url: "https://registry.npmjs.org"
+#
+#      - name: Cache node modules
+#        id: cache-node-modules
+#        uses: actions/cache@v3
+#        env:
+#          cache-name: cache-node-modules
+#        with:
+#          # caching node_modules
+#          path: node_modules
+#          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+#          restore-keys: |
+#            ${{ runner.os }}-build-${{ env.cache-name }}-
+#            ${{ runner.os }}-build-
+#            ${{ runner.os }}-
+#
+#      - name: Install Dependencies
+#        id: install-dependencies
+#        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+#        run: npm ci
+
+#      - name: Update Label for Patch
+#        if: ${{ github.event.label.name == 'Patch' }}
+#        run: npm version patch
+#
+#      - name: Update Label for Minor
+#        if: ${{ github.event.label.name == 'Minor' }}
+#        run: npm version minor
+#
+#      - name: Update Label for Major
+#        if: ${{ github.event.label.name == 'Major' }}
+#        run: npm version major
