--- a/.github/workflows/updateversion.yml
+++ b/.github/workflows/updateversion.yml
@@ -19,43 +19,48 @@ jobs:
           echo "LABEL=$first_label" >> $GITHUB_ENV
           echo "Label is $first_label"
       - name: Checkout code
-        if: ${{ env.LABEL == 'Patch' }}
         uses: actions/checkout@v2
 
-#      - name: Setup Node
-#        id: setup-node
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 18
-#          registry-url: "https://registry.npmjs.org"
-#
-#      - name: Cache node modules
-#        id: cache-node-modules
-#        uses: actions/cache@v3
-#        env:
-#          cache-name: cache-node-modules
-#        with:
-#          # caching node_modules
-#          path: node_modules
-#          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-#          restore-keys: |
-#            ${{ runner.os }}-build-${{ env.cache-name }}-
-#            ${{ runner.os }}-build-
-#            ${{ runner.os }}-
-#
-#      - name: Install Dependencies
-#        id: install-dependencies
-#        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-#        run: npm ci
+      - name: Setup Node
+        id: setup-node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: "https://registry.npmjs.org"
 
-#      - name: Update Label for Patch
-#        if: ${{ github.event.label.name == 'Patch' }}
-#        run: npm version patch
-#
-#      - name: Update Label for Minor
-#        if: ${{ github.event.label.name == 'Minor' }}
-#        run: npm version minor
-#
-#      - name: Update Label for Major
-#        if: ${{ github.event.label.name == 'Major' }}
-#        run: npm version major
+      - name: Cache node modules
+        id: cache-node-modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # caching node_modules
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: Install Dependencies
+        id: install-dependencies
+        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+        run: npm ci
+
+      - name: Update Label for Patch
+        if: ${{ env.LABEL == 'Patch' }}
+        run: npm version patch
+
+      - name: Update Label for Minor
+        if: ${{ env.LABEL == 'Minor' }}
+        run: npm version minor
+
+      - name: Update Label for Major
+        if: ${{ env.LABEL == 'Major' }}
+        run: npm version major
+
+      - name: Setup the release version and overwrite the existing major version tag
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git push
