--- a/.github/workflows/updateversion.yml
+++ b/.github/workflows/updateversion.yml
@@ -7,7 +7,8 @@ on:
       - create-release-from-label
 
 jobs:
-  check_merged:
+  update-version:
+    permissions: write-all
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true
     steps:
