--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Create Release
 on:
   push:
     tags:
-      - '*.*.*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - "*.*.*" # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   release:
