--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "jest": "^29.7.0",
     "jest-date-mock": "^1.0.8",
     "jest-mock-extended": "^3.0.5",
+    "jest-websocket-mock": "^2.5.0",
+    "mock-socket": "^9.3.1",
     "prettier": "3.2.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
