--- a/package.json
+++ b/package.json
@@ -46,5 +46,12 @@
   "dependencies": {
     "@atproto/api": "^0.7.4",
     "atproto-firehose": "^0.2.2"
+  },
+  "release": {
+    "branches": [
+      { "name": "main", "prerelease": false },
+      { "name": "beta", "prerelease": "beta" }
+    ],
+    "extends": "@semantic-release/npm"
   }
 }
