--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "npm install -g tsup && tsup",
     "test": "jest",
     "coverage": "jest --coverage",
     "prepublishOnly": "npm run build",
