--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-date-mock": "^1.0.8",
     "jest-mock-extended": "^3.0.5",
     "prettier": "3.2.4",
+    "semantic-release": "^22.0.12",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
