--- a/.github/workflows/semanticversionpublish.yml
+++ b/.github/workflows/semanticversionpublish.yml
@@ -12,28 +12,48 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v4
         with:
-          semantic_version: 16
-          branches: |
-            [
-              '+([0-9])?(.{+([0-9]),x}).x',
-              'main',
-              'next',
-              'next-major',
-              {
-                name: 'beta',
-                prerelease: true
-              },
-              {
-                name: 'alpha',
-                prerelease: true
-              }
-            ]
+          fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm clean-install
+      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
+        run: npm audit signatures
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#      - name: Semantic Release
+#        uses: cycjimmy/semantic-release-action@v4
+#        with:
+#          semantic_version: 16
+#          branches: |
+#            [
+#              '+([0-9])?(.{+([0-9]),x}).x',
+#              'main',
+#              'next',
+#              'next-major',
+#              {
+#                name: 'beta',
+#                prerelease: true
+#              },
+#              {
+#                name: 'alpha',
+#                prerelease: true
+#              }
+#            ]
+#          extra_plugins: |
+#            @semantic-release/changelog
+#            @semantic-release/git
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.PAT }}
+#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 #      - name: Zip artifact for release
 #        id: zip-dist
