--- a/.github/workflows/semanticversionpublish.yml
+++ b/.github/workflows/semanticversionpublish.yml
@@ -27,57 +27,30 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#      - name: Semantic Release
-#        uses: cycjimmy/semantic-release-action@v4
-#        with:
-#          semantic_version: 16
-#          branches: |
-#            [
-#              '+([0-9])?(.{+([0-9]),x}).x',
-#              'main',
-#              'next',
-#              'next-major',
-#              {
-#                name: 'beta',
-#                prerelease: true
-#              },
-#              {
-#                name: 'alpha',
-#                prerelease: true
-#              }
-#            ]
-#          extra_plugins: |
-#            @semantic-release/changelog
-#            @semantic-release/git
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.PAT }}
-#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-#      - name: Zip artifact for release
-#        id: zip-dist
-#        run: zip dist.zip ./dist/* -r
-#
-#      - name: Create Release
-#        id: create_release
-#        uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-#        with:
-#          tag_name: ${{ github.ref_name }}
-#          release_name: Release ${{ github.ref_name }}
-#          body: Todo, get release notes!
-#          draft: false
-#          prerelease: false
-#
-#      - name: Upload Release Build
-#        id: upload-release-build
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-#          asset_path: ./dist.zip
-#          asset_name: dist.zip
-#          asset_content_type: application/zip
+      - name: Zip artifact for release
+        id: zip-dist
+        run: zip dist.zip ./dist/* -r
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          body: Todo, get release notes!
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Build
+        id: upload-release-build
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./dist.zip
+          asset_name: dist.zip
+          asset_content_type: application/zip
