--- a/.github/workflows/semanticversionpublish.yml
+++ b/.github/workflows/semanticversionpublish.yml
@@ -28,29 +28,29 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
 
-      - name: Zip artifact for release
-        id: zip-dist
-        run: zip dist.zip ./dist/* -r
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          body: Todo, get release notes!
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Build
-        id: upload-release-build
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./dist.zip
-          asset_name: dist.zip
-          asset_content_type: application/zip
+#      - name: Zip artifact for release
+#        id: zip-dist
+#        run: zip dist.zip ./dist/* -r
+#
+#      - name: Create Release
+#        id: create_release
+#        uses: actions/create-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+#        with:
+#          tag_name: ${{ github.ref_name }}
+#          release_name: Release ${{ github.ref_name }}
+#          body: Todo, get release notes!
+#          draft: false
+#          prerelease: false
+#
+#      - name: Upload Release Build
+#        id: upload-release-build
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+#          asset_path: ./dist.zip
+#          asset_name: dist.zip
+#          asset_content_type: application/zip
