--- a/package.json
+++ b/package.json
@@ -55,8 +55,16 @@
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
       "@semantic-release/npm",
-      "@semantic-release/git",
-      "@semantic-release/changelog"
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogFile": "docs/CHANGELOG.md"
+        }
+      ],
+      ["@semantic-release/git", {
+        "assets": ["dist/*.{js,ts,mjs,mts}", "docs", "package.json"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }]
     ],
     "branches": [
       {
