fix: change order

--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
       [
         "@semantic-release/changelog",
         {
           "changelogFile": "docs/CHANGELOG.md"
         }
       ],
+      "@semantic-release/npm",
       ["@semantic-release/git", {
         "assets": ["dist/*.{js,ts,mjs,mts}", "docs", "package.json"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
@@ -73,7 +73,7 @@
       },
       {
         "name": "beta",
-        "prerelease": "beta"
+        "prerelease": false
       }
     ]
   }
