--- a/package.json
+++ b/package.json
@@ -62,14 +62,12 @@
       ],
       "@semantic-release/npm",
       [
-        "@semantic-release/git",
+        "@semantic-release/github",
         {
           "assets": [
-            "dist/*.{js,ts,mjs,mts}",
-            "docs",
-            "package.json"
-          ],
-          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+            { "path": "dist/*.{js,ts,mjs,mts", "label": "Distribution" },
+            { "path": "docs/CHANGELOG.md", "label": "Change log" }
+          ]
         }
       ]
     ],
