--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         "@semantic-release/github",
         {
           "assets": [
-            { "path": "dist/*.{js,ts,mjs,mts}", "label": "Distribution" },
+            { "path": "dist", "label": "Distribution Files" },
             { "path": "docs/CHANGELOG.md", "label": "Change log" }
           ]
         }
