add next branch to release

--- a/package.json
+++ b/package.json
@@ -232,6 +232,10 @@
                 "prerelease": false
             },
             {
+                "name": "next",
+                "prerelease": "next"
+            },
+            {
                 "name": "beta",
                 "prerelease": "beta"
             }
